Added extra cards per assignement guidelines

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Lambda Times</title>
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="./components/Tabs/Tabs.js" async></script>
   <!-- <script src="./components/Carousel/Carousel.js" async></script> -->
 </head>
@@ -45,6 +45,8 @@
       <div data-tab="node" class="tab">NODE.JS</div>
       <div data-tab="jquery" class="tab">jQUERY</div>
       <div data-tab="bootstrap" class="tab">BOOTSTRAP</div>
+      <div data-tab="extra" class="tab">EXTRA</div>
+      <div data-tab="extra1" class="tab">EXTRA1</div>
     </div>
   </div>
 
@@ -205,6 +207,25 @@
 
     <div class="card" data-tab="bootstrap">
       <div class="headline">The Hottest New Bootstrap 4 Components Every Developer Needs to Know About</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
+    <div class="card" data-tab="extra">
+      <div class="headline">This is an extra Card added to Check Functionality</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/fido.jpg" />
+        </div>
+        <span>By FIDO WALKSALOT</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="extra1">
+      <div class="headline">This is also an extra Card added to Check Functionality</div>
       <div class="author">
         <div class="img-container">
           <img src="./assets/max.jpg" />
